Update base URL and sitemap links to reflect new GitHub Pages domain for improved site accessibility and consistency across documentation.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Documentation Technologies Médicales Novuus
 description: Documentation complète des technologies médicales développées par Novuus
 baseurl: "/docs_novuus" # Chemin de base pour GitHub Pages (nom du repository)
-url: "https://morningstar-47.github.io" # URL de base GitHub Pages
+url: "https://morningstar-manu.github.io" # URL de base GitHub Pages
 
 # Paramètres
 markdown: kramdown
